Use swift-format for autoformatting; use SwiftLint only in the IDE; add swift-argument-parser

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "swiftlint.onlyEnableOnSwiftPMProjects": true
+  "apple-swift-format.onlyEnableOnSwiftPMProjects": true,
+  "apple-swift-format.configSearchPaths": [
+    ".swift-format.json"
+  ]
 }
