--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,14 +5,7 @@
     {
       "label": "swift-build",
       "type": "shell",
-      "command": "swift build" // for TensorFlow add -Xlinker -ltensorflow
-    },
-    // lint your SPM project
-    {
-      "label": "swift-lint",
-      "type": "shell",
-      "command": "${workspaceFolder}/lint.sh",
-      "dependsOn": "swift-build"
+      "command": "swift build"
     },
     // compile your SPM tests
     {
@@ -20,11 +13,7 @@
       "type": "process",
       "command": "swift",
       "group": "build",
-      "args": [
-        "build",
-        "--build-tests"
-        // for TensorFlow add "-Xlinker", "-ltensorflow"
-      ]
+      "args": ["build", "--build-tests"]
     }
   ]
 }
