--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -24,7 +24,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Install Swift
+        if: ${{ os == 'windows-latest' }}
+        run: echo 'We should install Swift here.'
+
       - name: Build
         run: swift build -v
+
       - name: Run tests
         run: swift test -v
