--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install Swift
-        if: ${{ os == 'windows-latest' }}
+        if: ${{ matrix.os == 'windows-latest' }}
         run: echo 'We should install Swift here.'
 
       - name: Build
