--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -27,7 +27,12 @@ jobs:
 
       - name: Install Swift
         if: ${{ matrix.os == 'windows-latest' }}
-        run: echo 'We should install Swift here.'
+        uses: microsoft/setup-msbuild@v1
+        run: |
+          copy %SDKROOT%\usr\share\ucrt.modulemap "%UniversalCRTSdkDir%\Include\%UCRTVersion%\ucrt\module.modulemap"
+          copy %SDKROOT%\usr\share\visualc.modulemap "%VCToolsInstallDir%\include\module.modulemap"
+          copy %SDKROOT%\usr\share\visualc.apinotes "%VCToolsInstallDir%\include\visualc.apinotes"
+          copy %SDKROOT%\usr\share\winsdk.modulemap "%UniversalCRTSdkDir%\Include\%UCRTVersion%\um\module.modulemap"
 
       - name: Build
         run: swift build -v
