--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -64,31 +64,31 @@ jobs:
           export PATH="/c/Library/Swift/Current/bin:${PATH}"
           swift --version
 
-          echo 'Fetching ICU...'
-          mkdir -p .build/SDG/ICU
-          cd .build/SDG/ICU
-          # curl -L http://download.icu-project.org/files/icu4c/64.2/icu4c-64_2-Win64-MSVC2017.zip --output ICU.zip
-          curl -L https://github.com/unicode-org/icu/releases/download/release-64-2/icu4c-64_2-Win64-MSVC2017.zip --output ICU.zip
-          7z x ICU.zip -oICU-64.2
-          mv ICU-64.2 /c/Library/ICU-64.2
-          mv /c/Library/ICU-64.2/bin64 /c/Library/ICU-64.2/bin
-          export PATH="/c/Library/ICU-64.2/bin:${PATH}"
-          cd "${repository_directory}"
+          # echo 'Fetching ICU...'
+          # mkdir -p .build/SDG/ICU
+          # cd .build/SDG/ICU
+          # # curl -L http://download.icu-project.org/files/icu4c/64.2/icu4c-64_2-Win64-MSVC2017.zip --output ICU.zip
+          # curl -L https://github.com/unicode-org/icu/releases/download/release-64-2/icu4c-64_2-Win64-MSVC2017.zip --output ICU.zip
+          # 7z x ICU.zip -oICU-64.2
+          # mv ICU-64.2 /c/Library/ICU-64.2
+          # mv /c/Library/ICU-64.2/bin64 /c/Library/ICU-64.2/bin
+          # export PATH="/c/Library/ICU-64.2/bin:${PATH}"
+          # cd "${repository_directory}"
 
-          echo 'Fetching package graph...'
-          git clone https://github.com/apple/swift-package-manager.git .build/SDG/Dependencies/SwiftPM --branch 0.5.0 --depth 1 --config advice.detachedHead=false
-          git clone https://github.com/apple/swift-syntax .build/SDG/Dependencies/SwiftSyntax --branch 0.50100.0 --depth 1 --config advice.detachedHead=false
-          git clone https://github.com/apple/swift-llbuild.git .build/SDG/Dependencies/llbuild --branch 0.2.0 --depth 1 --config advice.detachedHead=false
-          git clone https://github.com/SDGGiesbrecht/swift-format .build/SDG/Dependencies/swift-format --branch 0.0.50100 --depth 1 --config advice.detachedHead=false
+          # echo 'Fetching package graph...'
+          # git clone https://github.com/apple/swift-package-manager.git .build/SDG/Dependencies/SwiftPM --branch 0.5.0 --depth 1 --config advice.detachedHead=false
+          # git clone https://github.com/apple/swift-syntax .build/SDG/Dependencies/SwiftSyntax --branch 0.50100.0 --depth 1 --config advice.detachedHead=false
+          # git clone https://github.com/apple/swift-llbuild.git .build/SDG/Dependencies/llbuild --branch 0.2.0 --depth 1 --config advice.detachedHead=false
+          # git clone https://github.com/SDGGiesbrecht/swift-format .build/SDG/Dependencies/swift-format --branch 0.0.50100 --depth 1 --config advice.detachedHead=false
 
-          echo 'Building Workspace...'
-          mkdir .github/workflows/Windows
-          cmake -G Ninja -S .github/workflows/Windows -B .build/SDG/CMake -DCMAKE_Swift_FLAGS='-resource-dir C:\Library\Developer\Platforms\Windows.platform\Developer\SDKs\Windows.sdk\usr\lib\swift -L C:\Library\Developer\Platforms\Windows.platform\Developer\SDKs\Windows.sdk\usr\lib\swift\windows -I C:\Library\Developer\Platforms\Windows.platform\Developer\Library\XCTest-development\usr\lib\swift\windows\x86_64 -L C:\Library\Developer\Platforms\Windows.platform\Developer\Library\XCTest-development\usr\lib\swift\windows' -DCMAKE_Swift_LINK_FLAGS='-resource-dir C:\Library\Developer\Platforms\Windows.platform\Developer\SDKs\Windows.sdk\usr\lib\swift -L C:\Library\Developer\Platforms\Windows.platform\Developer\SDKs\Windows.sdk\usr\lib\swift\windows -I C:\Library\Developer\Platforms\Windows.platform\Developer\Library\XCTest-development\usr\lib\swift\windows\x86_64 -L C:\Library\Developer\Platforms\Windows.platform\Developer\Library\XCTest-development\usr\lib\swift\windows'
-          cmake --build '.build/SDG/CMake'
+          # echo 'Building Workspace...'
+          # mkdir .github/workflows/Windows
+          # cmake -G Ninja -S .github/workflows/Windows -B .build/SDG/CMake -DCMAKE_Swift_FLAGS='-resource-dir C:\Library\Developer\Platforms\Windows.platform\Developer\SDKs\Windows.sdk\usr\lib\swift -L C:\Library\Developer\Platforms\Windows.platform\Developer\SDKs\Windows.sdk\usr\lib\swift\windows -I C:\Library\Developer\Platforms\Windows.platform\Developer\Library\XCTest-development\usr\lib\swift\windows\x86_64 -L C:\Library\Developer\Platforms\Windows.platform\Developer\Library\XCTest-development\usr\lib\swift\windows' -DCMAKE_Swift_LINK_FLAGS='-resource-dir C:\Library\Developer\Platforms\Windows.platform\Developer\SDKs\Windows.sdk\usr\lib\swift -L C:\Library\Developer\Platforms\Windows.platform\Developer\SDKs\Windows.sdk\usr\lib\swift\windows -I C:\Library\Developer\Platforms\Windows.platform\Developer\Library\XCTest-development\usr\lib\swift\windows\x86_64 -L C:\Library\Developer\Platforms\Windows.platform\Developer\Library\XCTest-development\usr\lib\swift\windows'
+          # cmake --build '.build/SDG/CMake'
 
-          echo 'Testing Workspace...'
-          cd .build/SDG/CMake
-          ctest --verbose
+          # echo 'Testing Workspace...'
+          # cd .build/SDG/CMake
+          # ctest --verbose
 
       - name: Build
         run: swift build -v
