--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -90,6 +90,8 @@ jobs:
           # echo 'Testing Workspace...'
           # cd .build/SDG/CMake
           # ctest --verbose
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: true # so we can use set-env
 
       - name: Build
         run: swift build -v
