--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -24,6 +24,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - uses: actions/cache@v1
+      with:
+        key: Windows‐${{ hashFiles('Refresh*') }}‐${{ hashFiles('.github/workflows/**') }}
+        path: .build/SDG/TextRenderer
 
       - name: Install Swift
         if: ${{ matrix.os == 'windows-latest' }}
